--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -90,12 +90,32 @@
 	-webkit-animation-name: bounce
 	span
 		background: #fff
-// @-webkit-keyframes bounce {
-// 	0%, 65%, 100% { margin-left: 0; margin-top: 0; height: 60px; width: 60px; }
-// 	10% { margin-left: -8px; margin-top: -8px; height: 76px; width: 76px; }
-// 	25% { margin-left: 3px; margin-top: 3px; height: 54px; width: 54px; }
-// 	40% { margin-left: -2px; margin-top: -2px; height: 64px; width: 64px; }
-// 	50% { margin-left: 1px; margin-top: 1px; height: 58px; width: 58px; }		
+@-webkit-keyframes bounce
+	0%, 65%, 100%
+		margin-left: 0
+		margin-top: 0
+		height: 60px
+		width: 60px
+	10%
+		margin-left: -8px
+		margin-top: -8px
+		height: 76px
+		width: 76px
+	25%
+		margin-left: 3px
+		margin-top: 3px
+		height: 54px
+		width: 54px
+	40%
+		margin-left: -2px
+		margin-top: -2px
+		height: 64px
+		width: 64px
+	50%
+		margin-left: 1px
+		margin-top: 1px
+		height: 58px
+		width: 58px	
 /*-----user-----------------------------------------------*/	
 .user
 	display: inline-block
