--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -10,23 +10,27 @@ $main-c: #333
 $text-other-c: #808080
 $cancel-c: #f24949
 $border-c: #e6e6e6
-$plus-c: #88cc7a
+$label-c: #88cc7a
 $link-hover-c: #4f88fe
-
 //sizes
 $header-h: 55px
 $nav-w: 280px
 $user-pic-h: 32px
+$label-h: 30px
 
 a
 	text-decoration: none	
 body
 	height: 100%	
+	-ms-overflow-x: hidden
+	overflow-x: hidden
 body,a
 	font-family: $noto-sans
 	font-size: $font-s  
 	line-height: $font-h 
 	color: $main-c
+em
+	font-family: $noto-serif  	
 	
 
 .wrap
