--- a/css/screen.css
+++ b/css/screen.css
@@ -20,9 +20,11 @@ table { border-spacing: 0; border-collapse: collapse; width: 100%; }
 
 a { text-decoration: none; }
 
-body { height: 100%; }
+body { height: 100%; -ms-overflow-x: hidden; overflow-x: hidden; }
 
 body, a { font-family: "Noto Sans", sans-serif; font-size: 14px; line-height: 22px; color: #333333; }
+
+em { font-family: "Noto Serif", serif; }
 
 .wrap { width: 100%; height: 100%; position: relative; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 
@@ -31,31 +33,46 @@ body, a { font-family: "Noto Sans", sans-serif; font-size: 14px; line-height: 22
 .nav, .main { height: 100%; display: block; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 
 /*-----nav------------------------------------------------------ */
-.nav { background-color: #333333; width: 280px; position: absolute; top: 0; left: 0; z-index: -1; }
+.nav { background-color: #333333; width: 280px; position: fixed; top: 0; left: 0; }
+.nav .nav__topper { height: 55px; line-height: 55px; border-bottom: 1px solid black; padding-left: 15px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+.nav .nav__label { height: 30px; line-height: 30px; border: 1px solid #88cc7a; color: #88cc7a; padding: 0 15px; display: inline-block; -webkit-border-radius: 15px; -moz-border-radius: 15px; -ms-border-radius: 15px; -o-border-radius: 15px; border-radius: 15px; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; }
+.nav .nav__label:hover { background-color: #262626; }
+.nav .nav__content { padding: 20px 15px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+.nav .nav__item { color: white; font-weight: bold; display: block; line-height: 45px; padding-left: 15px; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; }
+.nav .nav__item:hover { color: gray; }
 
 /*-----main------------------------------------------------------ */
-.main { background-color: white; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+.main { background-color: white; position: relative; width: 100%; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 
 .main-open { margin-left: 280px; }
 .main-open .header .header__btn { width: 0; margin-right: 0; }
 
 /*-----header------------------------------------------------------ */
-.header { position: fixed; padding: 0 25px 0 25px; height: 55px; border-bottom: 1px solid #e6e6e6; width: 100%; background-color: white; *zoom: 1; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+.header { position: fixed; padding: 0 25px 0 25px; height: 55px; border-bottom: 1px solid #e6e6e6; width: 100%; background-color: white; z-index: 12; *zoom: 1; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 .header:after { content: " "; display: table; clear: both; }
 .header .header__btn { display: inline-block; height: 11px; width: 26px; line-height: 55px; margin-right: 10px; background: url('../img/icons-sa02c8a0853.png') 0 -30px no-repeat; width: 26px; height: 11px; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; }
 .header .header__btn:hover { -webkit-transform: scaleX(1.2); -moz-transform: scaleX(1.2); -ms-transform: scaleX(1.2); -o-transform: scaleX(1.2); transform: scaleX(1.2); }
 .header .header__title { display: inline-block; line-height: 55px; }
 
 /*-----content------------------------------------------------------ */
-.content { padding-top: 55px; max-width: 1200px; margin: 0 auto; position: relative; }
-.content .add { top: 50px; left: 60px; }
+.content { padding: 70px 60px 20px 160px; padding-top: 120px; max-width: 1200px; margin: 0 auto; position: relative; *zoom: 1; }
+.content:after { content: " "; display: table; clear: both; }
+.content .content__left { float: left; width: 60%; margin-right: 5%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+.content .content__right { float: left; width: 30%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+.content .content__title { font-weight: bold; font-size: 24px; line-height: 28px; margin-bottom: 22px; }
+.content .content__note { margin-bottom: 60px; }
+.content .content__note p { margin-bottom: 22px; }
+.content .content__note .strong { font-weight: bold; }
+.content .content__text { margin-bottom: 44px; position: relative; }
+.content .content__text:after { position: absolute; content: ""; bottom: -22px; left: 0px; display: inline-block; height: 1px; width: 80px; background-color: #e6e6e6; }
+.content .content__context { font-style: italic; font-family: "Noto Serif", serif; color: gray; display: block; margin-left: 20px; }
+.content .add { top: 105px; left: 60px; }
 
 /*----add---------------------------------------------------------- */
-.add { position: relative; display: inline-block; height: 60px; width: 60px; border-radius: 35px; border: 1px solid #88cc7a; cursor: pointer; -webkit-transition-duration: 0.2s; }
+.add { position: absolute; display: inline-block; height: 60px; width: 60px; border-radius: 35px; border: 1px solid #88cc7a; cursor: pointer; -webkit-transition-duration: 0.2s; }
 .add span { position: absolute; display: inline-block; top: 50%; left: 50%; background: #88cc7a; }
 .add span.vertical { height: 22px; width: 2px; margin-top: -11px; margin-left: -1px; }
 .add span.horizontal { height: 2px; width: 22px; margin-top: -1px; margin-left: -11px; }
-
 .add:hover { background: #88cc7a; -webkit-transition-duration: 0.2s; -webkit-animation-duration: 1s; -webkit-animation-fill-mode: both; -webkit-animation-name: bounce; }
 .add:hover span { background: white; }
 
@@ -66,7 +83,7 @@ body, a { font-family: "Noto Sans", sans-serif; font-size: 14px; line-height: 22
   50% { margin-left: 1px; margin-top: 1px; height: 58px; width: 58px; } }
 
 /*-----user----------------------------------------------- */
-.user { display: inline-block; position: fixed; top: 5px; right: 10px; height: 63px; min-width: 240px; background-color: whitesmoke; padding: 5px 15px; -webkit-border-radius: 5px; -moz-border-radius: 5px; -ms-border-radius: 5px; -o-border-radius: 5px; border-radius: 5px; *zoom: 1; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+.user { display: inline-block; position: fixed; top: 5px; right: 10px; height: 63px; min-width: 240px; background-color: whitesmoke; padding: 5px 15px; z-index: 13; -webkit-border-radius: 5px; -moz-border-radius: 5px; -ms-border-radius: 5px; -o-border-radius: 5px; border-radius: 5px; *zoom: 1; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 .user:after { content: " "; display: table; clear: both; }
 .user .user__pic { float: left; display: inline-block; height: 32px; width: 32px; overflow: hidden; text-align: center; -webkit-border-radius: 16px; -moz-border-radius: 16px; -ms-border-radius: 16px; -o-border-radius: 16px; border-radius: 16px; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; }
 .user .user__pic:hover { -webkit-box-shadow: 0px 0px 3px #333333; -moz-box-shadow: 0px 0px 3px #333333; box-shadow: 0px 0px 3px #333333; }
