--- a/css/screen.css
+++ b/css/screen.css
@@ -39,8 +39,20 @@ em { font-family: "Noto Serif", serif; }
 .nav .nav__label { height: 30px; line-height: 30px; border: 1px solid #88cc7a; color: #88cc7a; padding: 0 15px; display: inline-block; -webkit-border-radius: 15px; -moz-border-radius: 15px; -ms-border-radius: 15px; -o-border-radius: 15px; border-radius: 15px; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; }
 .nav .nav__label:hover { background-color: #262626; }
 .nav .nav__content { padding: 20px 15px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
-.nav .nav__item { color: white; font-weight: bold; display: block; line-height: 45px; padding-left: 15px; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; }
+.nav .nav__item { color: white; font-weight: bold; display: block; line-height: 45px; height: 45px; white-space: nowrap; padding-left: 15px; outline: none; position: relative; }
 .nav .nav__item:hover { color: gray; }
+.nav .nav__item:hover .nav__item-point { cursor: pointer; }
+.nav .nav__item:hover .nav__item-point span { filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50); opacity: 0.5; }
+.nav .nav__item:focus { background-color: white; color: #333333; -webkit-border-radius: 5px; -moz-border-radius: 5px; -ms-border-radius: 5px; -o-border-radius: 5px; border-radius: 5px; }
+.nav .nav__item-point { position: absolute; bottom: 18px; right: 0px; display: block; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; *zoom: 1; }
+.nav .nav__item-point:after { content: " "; display: table; clear: both; }
+.nav .nav__item-point span { background-color: white; height: 4px; width: 4px; margin-left: 3px; float: left; filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0); opacity: 0; -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; }
+.nav .nav__item-point:hover .nav__item-popup { display: inline-block; }
+.nav .nav__item-popup { position: absolute; top: 13px; right: -70px; display: inline-block; width: 135px; z-index: 11; background-color: #cccccc; padding: 10px; display: none; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; -webkit-border-radius: 5px; -moz-border-radius: 5px; -ms-border-radius: 5px; -o-border-radius: 5px; border-radius: 5px; *zoom: 1; }
+.nav .nav__item-popup:after { content: " "; display: table; clear: both; }
+.nav .nav__item-popup:before { position: absolute; content: ""; top: -5px; right: 50%; margin-right: -3px; width: 0; height: 0; border-style: solid; border-width: 0 5px 5px 5px; border-color: transparent transparent #cccccc transparent; display: inline-block; }
+.nav .nav__item-link { float: left; margin: 0 5px; z-index: 11; cursor: pointer; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; }
+.nav .nav__item-link:hover { color: #f24949; }
 
 .nav-open { left: 0; }
 
@@ -48,19 +60,18 @@ em { font-family: "Noto Serif", serif; }
 .main { background-color: white; position: relative; width: 100%; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 
 .main-open { margin-left: 280px; }
-.main-open .header .header__btn { width: 0; margin-right: 0; }
+.main-open .header .header__btn { display: none; }
+.main-open .header__title { padding-left: 0; }
 @media only screen and (max-width: 320px) { .main-open { margin-left: 0; } }
 
 /*-----header------------------------------------------------------ */
 .header { position: fixed; padding: 0 25px 0 25px; height: 55px; border-bottom: 1px solid #e6e6e6; width: 100%; background-color: white; z-index: 12; *zoom: 1; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 .header:after { content: " "; display: table; clear: both; }
 @media only screen and (max-width: 320px) { .header { padding: 0 15px; } }
-.header .header__btn { display: inline-block; height: 11px; width: 26px; line-height: 55px; margin-right: 10px; background: url('../img/icons-sa02c8a0853.png') 0 -30px no-repeat; width: 26px; height: 11px; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; }
-.header .header__btn:hover { -webkit-transform: scaleX(1.2); -moz-transform: scaleX(1.2); -ms-transform: scaleX(1.2); -o-transform: scaleX(1.2); transform: scaleX(1.2); }
 .header .header__title { display: inline-block; font-size: 12px; line-height: 55px; }
-@media only screen and (max-width: 560px) { .header .header__title { visibility: hidden; } }
+@media only screen and (max-width: 560px) { .header .header__title .header__text { visibility: hidden; } }
 .header .add { display: none; }
-@media only screen and (max-width: 768px) { .header .add { display: block; top: -3px; left: 50%; margin-left: -30px; border: none; -webkit-transform: none; -moz-transform: none; -ms-transform: none; -o-transform: none; transform: none; } }
+@media only screen and (max-width: 768px) { .header .add { display: block; top: -3px; left: 47.5%; border: none; } }
 
 /*-----content------------------------------------------------------ */
 .content { padding: 70px 60px 20px 160px; padding-top: 120px; max-width: 1200px; margin: 0 auto; position: relative; *zoom: 1; }
@@ -116,3 +127,12 @@ em { font-family: "Noto Serif", serif; }
 .user .user__btn a:hover { color: #4f88fe; }
 
 @media only screen and (max-width: 560px) { .user-open { right: 10px; background-color: whitesmoke; } }
+
+.header__title { display: inline-block; line-height: 54px; padding-left: 35px; padding-right: 24px; cursor: pointer; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; }
+.header__title:hover .header__btn { -webkit-animation-name: bounce2; }
+
+.header__btn { position: absolute; top: 21px; left: 24px; width: 26px; margin-right: 8px; padding: 4px 0; border-bottom: 1px solid #333333; border-top: 1px solid #333333; opacity: 0.1; z-index: 2; -webkit-animation-duration: 0.3s; -webkit-animation-fill-mode: both; }
+
+.header__title em { display: block; height: 1px; background: #333333; }
+
+@-webkit-keyframes bounce2 { 100% { opacity: 1; width: 28px; left: 23px; } }
