--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -39,10 +39,76 @@
 		font-weight: bold 
 		display: block
 		line-height: 45px
+		height: 45px
+		white-space: nowrap
 		padding-left: 15px
+		outline: none
+		position: relative
+		&:hover
+			color: $text-other-c
+			.nav__item-point
+				cursor: pointer
+				span
+					+opacity(0.5)			
+		&:focus
+			background-color: #fff
+			color: $main-c
+			+border-radius(5px)
+	.nav__item-point
+		position: absolute
+		bottom: 18px
+		right: 0px
+		display: block
+		+transition
+		+clr
+		span
+			background-color: #FFF
+			height: 4px
+			width: 4px
+			margin-left: 3px
+			float: left
+			+opacity(0)
+			+border-radius(4px)
+			+transition
+		&:hover
+			.nav__item-popup
+				display: inline-block	
+	.nav__item-popup
+		position: absolute
+		top: 13px
+		right: -70px
+		display: inline-block
+		width: 135px
+		z-index: 11  
+		background-color: #ccc
+		padding: 10px
+		display: none
+		+transition 
+		+border-radius(5px)
+		+clr
+		&:before
+			position: absolute
+			content: ""
+			top: -5px
+			right: 50%
+			margin-right: -3px 
+			width: 0
+			height: 0
+			border-style: solid
+			border-width: 0 5px 5px 5px
+			border-color: transparent transparent #ccc transparent
+			display: inline-block
+	.nav__item-link
+		float: left
+		margin: 0 5px 
+		z-index: 11
+		cursor: pointer
 		+transition
 		&:hover
-			color: $text-other-c 
+			color: $cancel-c
+ 					
+
+		 		  	 
 .nav-open
 	left: 0				
 /*-----main------------------------------------------------------*/
@@ -55,8 +121,9 @@
 .main-open
 	margin-left: $nav-w
 	.header .header__btn
-		width: 0
-		margin-right: 0
+		display: none
+	.header__title
+		padding-left: 0	
 	+r(w320)
 		margin-left: 0		
 /*-----header------------------------------------------------------*/
@@ -72,32 +139,30 @@
 	+box
 	+r(w320)
 		padding: 0 15px 
-	.header__btn
-		display: inline-block
-		height: 11px
-		width: 26px
-		line-height: $header-h
-		margin-right: 10px 
-		+s(i-btn-for-nav)
-		+transition
-		&:hover
-			+transform(scaleX(1.2))	
+	// .header__btn
+	// 	display: inline-block
+	// 	height: 11px
+	// 	width: 26px
+	// 	line-height: $header-h
+	// 	margin-right: 10px 
+	// 	+s(i-btn-for-nav)
+	// 	+transition
+	// 	&:hover
+	// 		+transform(scaleX(1.2))	
 	.header__title	
 		display: inline-block
 		font-size: 12px
 		line-height: $header-h
 		+r(w560)
-			visibility: hidden
+			.header__text
+				visibility: hidden
 	.add
 		display: none
 		+r(w768)
 			display: block
 			top: -3px
-			left: 50%
-			margin-left: -30px 
-			border: none
-			+transform(none)
-			
+			left: 47.5%
+			border: none		
 /*-----content------------------------------------------------------*/
 .content
 	padding: 70px 60px 20px 160px 
@@ -184,7 +249,7 @@
 	cursor: pointer
 	-webkit-transition-duration: .2s
 	+r(w1024)
-		+transform(scale(0.8))
+		+transform(scale(0.8))	
 	span
 		position: absolute
 		display: inline-block
@@ -288,3 +353,46 @@
 	+r(w560)
 		right: 10px
 		background-color: #F5F5F5 					
+		
+
+
+
+
+
+
+
+
+
+
+.header__title
+	display: inline-block
+	line-height: 54px
+	padding-left: 35px
+	padding-right: 24px
+	cursor: pointer
+	+transition
+	&:hover .header__btn
+		-webkit-animation-name: bounce2
+.header__btn
+	position: absolute
+	top: 21px
+	left: 24px
+	width: 26px
+	margin-right: 8px
+	padding: 4px 0
+	border-bottom: 1px solid #333
+	border-top: 1px solid #333
+	opacity: .1
+	z-index: 2
+	-webkit-animation-duration: .3s
+	-webkit-animation-fill-mode: both
+.header__title em
+	display: block
+	height: 1px
+	background: #333
+
+@-webkit-keyframes bounce2
+	100%
+		opacity: 1
+		width: 28px
+		left: 23px
