--- a/css/screen.css
+++ b/css/screen.css
@@ -68,10 +68,8 @@ em { font-family: "Noto Serif", serif; }
 .header { position: fixed; padding: 0 25px 0 25px; height: 55px; border-bottom: 1px solid #e6e6e6; width: 100%; background-color: white; z-index: 12; *zoom: 1; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 .header:after { content: " "; display: table; clear: both; }
 @media only screen and (max-width: 320px) { .header { padding: 0 15px; } }
-.header .header__title { display: inline-block; font-size: 12px; line-height: 55px; }
+.header .header__title { display: inline-block; font-size: 14px; line-height: 55px; }
 @media only screen and (max-width: 560px) { .header .header__title .header__text { visibility: hidden; } }
-.header .add { display: none; }
-@media only screen and (max-width: 768px) { .header .add { display: block; top: -3px; left: 47.5%; border: none; } }
 
 /*-----content------------------------------------------------------ */
 .content { padding: 70px 60px 20px 160px; padding-top: 120px; max-width: 1200px; margin: 0 auto; position: relative; *zoom: 1; }
@@ -80,11 +78,9 @@ em { font-family: "Noto Serif", serif; }
 @media only screen and (max-width: 768px) { .content { padding-left: 60px; } }
 @media only screen and (max-width: 320px) { .content { padding: 70px 20px 20px 20px; padding-top: 70px; } }
 .content .content__left { float: left; width: 60%; margin-right: 5%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
-@media only screen and (max-width: 1024px) { .content .content__left { width: 70%main; margin-right: 2%; } }
-@media only screen and (max-width: 768px) { .content .content__left { width: 100%; margin-right: 0; } }
+@media only screen and (max-width: 1024px) { .content .content__left { width: 100%; margin-right: 0; } }
 .content .content__right { float: left; width: 30%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
-@media only screen and (max-width: 1024px) { .content .content__right { width: 28%; } }
-@media only screen and (max-width: 768px) { .content .content__right { display: none; } }
+@media only screen and (max-width: 1024px) { .content .content__right { display: none; } }
 .content .content__title { font-weight: bold; font-size: 24px; line-height: 28px; margin-bottom: 12px; }
 @media only screen and (max-width: 320px) { .content .content__title { font-size: 20px; margin-bottom: 7px; } }
 .content .content__note { margin-bottom: 50px; }
@@ -94,16 +90,34 @@ em { font-family: "Noto Serif", serif; }
 .content .content__text:after { position: absolute; content: ""; bottom: -16px; left: 0px; display: inline-block; height: 1px; width: 80px; background-color: #e6e6e6; }
 .content .content__context { font-style: italic; font-family: "Noto Serif", serif; color: gray; display: block; margin-left: 20px; }
 .content .add { top: 105px; left: 60px; }
-@media only screen and (max-width: 1024px) { .content .add { top: 80px; left: 20px; } }
+@media only screen and (max-width: 1024px) { .content .add { top: 80px; left: 20px; height: 50px; width: 50px; }
+  .content .add:hover { -webkit-animation-name: bounce1; -moz-animation-name: bounce1; animation-name: bounce1; } }
 @media only screen and (max-width: 768px) { .content .add { display: none; } }
 
+@-webkit-keyframes bounce1 { 0%, 65%, 100% { margin-left: 0; margin-top: 0; height: 50px; width: 50px; }
+  10% { margin-left: -8px; margin-top: -8px; height: 66px; width: 66px; }
+  25% { margin-left: 3px; margin-top: 3px; height: 44px; width: 44px; }
+  40% { margin-left: -2px; margin-top: -2px; height: 54px; width: 54px; }
+  50% { margin-left: 1px; margin-top: 1px; height: 48px; width: 48px; } }
+
+@-moz-keyframes bounce1 { 0%, 65%, 100% { margin-left: 0; margin-top: 0; height: 50px; width: 50px; }
+  10% { margin-left: -8px; margin-top: -8px; height: 66px; width: 66px; }
+  25% { margin-left: 3px; margin-top: 3px; height: 44px; width: 44px; }
+  40% { margin-left: -2px; margin-top: -2px; height: 54px; width: 54px; }
+  50% { margin-left: 1px; margin-top: 1px; height: 48px; width: 48px; } }
+
+@keyframes bounce1 { 0%, 65%, 100% { margin-left: 0; margin-top: 0; height: 50px; width: 50px; }
+  10% { margin-left: -8px; margin-top: -8px; height: 66px; width: 66px; }
+  25% { margin-left: 3px; margin-top: 3px; height: 44px; width: 44px; }
+  40% { margin-left: -2px; margin-top: -2px; height: 54px; width: 54px; }
+  50% { margin-left: 1px; margin-top: 1px; height: 48px; width: 48px; } }
+
 /*----add---------------------------------------------------------- */
-.add { position: absolute; display: inline-block; height: 60px; width: 60px; border-radius: 35px; border: 1px solid #88cc7a; cursor: pointer; -webkit-transition-duration: 0.2s; }
-@media only screen and (max-width: 1024px) { .add { -webkit-transform: scale(0.8); -moz-transform: scale(0.8); -ms-transform: scale(0.8); -o-transform: scale(0.8); transform: scale(0.8); } }
+.add { position: absolute; display: inline-block; height: 60px; width: 60px; border-radius: 35px; border: 1px solid #88cc7a; cursor: pointer; -webkit-transition-duration: 0.2s; -moz-transition-duration: 0.2s; transition-duration: 0.2s; }
 .add span { position: absolute; display: inline-block; top: 50%; left: 50%; background: #88cc7a; }
 .add span.vertical { height: 22px; width: 2px; margin-top: -11px; margin-left: -1px; }
 .add span.horizontal { height: 2px; width: 22px; margin-top: -1px; margin-left: -11px; }
-.add:hover { background: #88cc7a; -webkit-transition-duration: 0.2s; -webkit-animation-duration: 1s; -webkit-animation-fill-mode: both; -webkit-animation-name: bounce; }
+.add:hover { background: #88cc7a; -webkit-transition-duration: 0.2s; -webkit-animation-duration: 1s; -webkit-animation-fill-mode: both; -webkit-animation-name: bounce; -moz-transition-duration: 0.2s; -moz-animation-duration: 1s; -moz-animation-fill-mode: both; -moz-animation-name: bounce; transition-duration: 0.2s; animation-duration: 1s; animation-fill-mode: both; animation-name: bounce; }
 .add:hover span { background: white; }
 
 @-webkit-keyframes bounce { 0%, 65%, 100% { margin-left: 0; margin-top: 0; height: 60px; width: 60px; }
@@ -112,10 +126,47 @@ em { font-family: "Noto Serif", serif; }
   40% { margin-left: -2px; margin-top: -2px; height: 64px; width: 64px; }
   50% { margin-left: 1px; margin-top: 1px; height: 58px; width: 58px; } }
 
+@-moz-keyframes bounce { 0%, 65%, 100% { margin-left: 0; margin-top: 0; height: 60px; width: 60px; }
+  10% { margin-left: -8px; margin-top: -8px; height: 76px; width: 76px; }
+  25% { margin-left: 3px; margin-top: 3px; height: 54px; width: 54px; }
+  40% { margin-left: -2px; margin-top: -2px; height: 64px; width: 64px; }
+  50% { margin-left: 1px; margin-top: 1px; height: 58px; width: 58px; } }
+
+@keyframes bounce { 0%, 65%, 100% { margin-left: 0; margin-top: 0; height: 60px; width: 60px; }
+  10% { margin-left: -8px; margin-top: -8px; height: 76px; width: 76px; }
+  25% { margin-left: 3px; margin-top: 3px; height: 54px; width: 54px; }
+  40% { margin-left: -2px; margin-top: -2px; height: 64px; width: 64px; }
+  50% { margin-left: 1px; margin-top: 1px; height: 58px; width: 58px; } }
+
+.add-min { position: absolute; display: inline-block; display: none; height: 50px; width: 50px; border-radius: 35px; border: 1px solid #88cc7a; cursor: pointer; -webkit-transition-duration: 0.2s; -moz-transition-duration: 0.2s; transition-duration: 0.2s; }
+@media only screen and (max-width: 768px) { .add-min { display: inline-block; top: 2px; left: 47.5%; border: none; } }
+.add-min span { position: absolute; display: inline-block; top: 50%; left: 50%; background: #88cc7a; }
+.add-min span.vertical { height: 22px; width: 2px; margin-top: -11px; margin-left: -1px; }
+.add-min span.horizontal { height: 2px; width: 22px; margin-top: -1px; margin-left: -11px; }
+.add-min:hover { background: #88cc7a; -webkit-transition-duration: 0.2s; -webkit-animation-duration: 1s; -webkit-animation-fill-mode: both; -webkit-animation-name: bounce-min; -moz-transition-duration: 0.2s; -moz-animation-duration: 1s; -moz-animation-fill-mode: both; -moz-animation-name: bounce-min; transition-duration: 0.2s; animation-duration: 1s; animation-fill-mode: both; animation-name: bounce-min; }
+.add-min:hover span { background: white; }
+
+@-webkit-keyframes bounce-min { 0%, 65%, 100% { margin-left: 0; margin-top: 0; height: 50px; width: 50px; }
+  10% { margin-left: -8px; margin-top: -8px; height: 66px; width: 66px; }
+  25% { margin-left: 3px; margin-top: 3px; height: 44px; width: 44px; }
+  40% { margin-left: -2px; margin-top: -2px; height: 54px; width: 54px; }
+  50% { margin-left: 1px; margin-top: 1px; height: 48px; width: 48px; } }
+
+@-moz-keyframes bounce-min { 0%, 65%, 100% { margin-left: 0; margin-top: 0; height: 50px; width: 50px; }
+  10% { margin-left: -8px; margin-top: -8px; height: 66px; width: 66px; }
+  25% { margin-left: 3px; margin-top: 3px; height: 44px; width: 44px; }
+  40% { margin-left: -2px; margin-top: -2px; height: 54px; width: 54px; }
+  50% { margin-left: 1px; margin-top: 1px; height: 48px; width: 48px; } }
+
+@keyframes bounce-min { 0%, 65%, 100% { margin-left: 0; margin-top: 0; height: 50px; width: 50px; }
+  10% { margin-left: -8px; margin-top: -8px; height: 66px; width: 66px; }
+  25% { margin-left: 3px; margin-top: 3px; height: 44px; width: 44px; }
+  40% { margin-left: -2px; margin-top: -2px; height: 54px; width: 54px; }
+  50% { margin-left: 1px; margin-top: 1px; height: 48px; width: 48px; } }
+
 /*-----user----------------------------------------------- */
-.user { display: inline-block; position: fixed; top: 5px; right: 10px; height: 63px; width: 240px; background-color: whitesmoke; padding: 5px 15px; z-index: 13; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; -webkit-border-radius: 5px; -moz-border-radius: 5px; -ms-border-radius: 5px; -o-border-radius: 5px; border-radius: 5px; *zoom: 1; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+.user { display: inline-block; position: fixed; top: 5px; right: 10px; height: 63px; width: 240px; background-color: whitesmoke; padding: 5px 15px; z-index: 13; background-color: transparent; right: -185px; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; -webkit-border-radius: 5px; -moz-border-radius: 5px; -ms-border-radius: 5px; -o-border-radius: 5px; border-radius: 5px; *zoom: 1; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 .user:after { content: " "; display: table; clear: both; }
-@media only screen and (max-width: 560px) { .user { background-color: transparent; right: -185px; } }
 .user .user__pic { float: left; display: inline-block; height: 32px; width: 32px; overflow: hidden; text-align: center; -webkit-border-radius: 16px; -moz-border-radius: 16px; -ms-border-radius: 16px; -o-border-radius: 16px; border-radius: 16px; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; }
 .user .user__pic:hover { -webkit-box-shadow: 0px 0px 3px #333333; -moz-box-shadow: 0px 0px 3px #333333; box-shadow: 0px 0px 3px #333333; }
 .user .user__pic img { height: auto; max-width: 100%; }
@@ -126,13 +177,17 @@ em { font-family: "Noto Serif", serif; }
 .user .user__btn a { float: left; color: gray; margin-right: 15px; font-size: 12px; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; }
 .user .user__btn a:hover { color: #4f88fe; }
 
-@media only screen and (max-width: 560px) { .user-open { right: 10px; background-color: whitesmoke; } }
+.user-open { right: 10px; background-color: whitesmoke; }
 
 .header__title { display: inline-block; line-height: 54px; padding-left: 35px; padding-right: 24px; cursor: pointer; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; }
-.header__title:hover .header__btn { -webkit-animation-name: bounce2; }
+.header__title:hover .header__btn { -webkit-animation-name: bounce2; -moz-animation-name: bounce2; -animation-name: bounce2; }
 
-.header__btn { position: absolute; top: 21px; left: 24px; width: 26px; margin-right: 8px; padding: 4px 0; border-bottom: 1px solid #333333; border-top: 1px solid #333333; opacity: 0.1; z-index: 2; -webkit-animation-duration: 0.3s; -webkit-animation-fill-mode: both; }
+.header__btn { position: absolute; top: 21px; left: 24px; width: 26px; margin-right: 8px; padding: 4px 0; border-bottom: 1px solid #333333; border-top: 1px solid #333333; opacity: 0.1; z-index: 2; -webkit-animation-duration: 0.3s; -webkit-animation-fill-mode: both; animation-duration: 0.3s; animation-fill-mode: both; -moz-animation-duration: 0.3s; -moz-animation-fill-mode: both; }
 
 .header__title em { display: block; height: 1px; background: #333333; }
 
 @-webkit-keyframes bounce2 { 100% { opacity: 1; width: 28px; left: 23px; } }
+
+@-moz-keyframes bounce2 { 100% { opacity: 1; width: 28px; left: 23px; } }
+
+@keyframes bounce2 { 100% { opacity: 1; width: 28px; left: 23px; } }
