--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -106,9 +106,6 @@
 		+transition
 		&:hover
 			color: $cancel-c
- 					
-
-		 		  	 
 .nav-open
 	left: 0				
 /*-----main------------------------------------------------------*/
@@ -139,30 +136,13 @@
 	+box
 	+r(w320)
 		padding: 0 15px 
-	// .header__btn
-	// 	display: inline-block
-	// 	height: 11px
-	// 	width: 26px
-	// 	line-height: $header-h
-	// 	margin-right: 10px 
-	// 	+s(i-btn-for-nav)
-	// 	+transition
-	// 	&:hover
-	// 		+transform(scaleX(1.2))	
 	.header__title	
 		display: inline-block
-		font-size: 12px
+		font-size: 14px
 		line-height: $header-h
 		+r(w560)
 			.header__text
-				visibility: hidden
-	.add
-		display: none
-		+r(w768)
-			display: block
-			top: -3px
-			left: 47.5%
-			border: none		
+				visibility: hidden		
 /*-----content------------------------------------------------------*/
 .content
 	padding: 70px 60px 20px 160px 
@@ -185,9 +165,6 @@
 		margin-right: 5% 
 		+box
 		+r(w1024)
-			width: 70%main
-			margin-right: 2%
-		+r(w768)
 			width: 100%
 			margin-right: 0	
 	.content__right
@@ -195,8 +172,6 @@
 		width: 30%
 		+box
 		+r(w1024)
-			width: 28%
-		+r(w768)
 			display: none 			
 	.content__title
 		font-weight: bold
@@ -236,8 +211,92 @@
 		+r(w1024)
 			top: 25px+$header-h
 			left: 20px
+			height: 50px
+			width: 50px
+			&:hover
+				-webkit-animation-name: bounce1
+				-moz-animation-name: bounce1
+				animation-name: bounce1						
 		+r(w768)
 			display: none	
+@-webkit-keyframes bounce1
+	0%, 65%, 100%
+		margin-left: 0
+		margin-top: 0
+		height: 50px
+		width: 50px
+	10%
+		margin-left: -8px
+		margin-top: -8px
+		height: 66px
+		width: 66px
+	25%
+		margin-left: 3px
+		margin-top: 3px
+		height: 44px
+		width: 44px
+	40%
+		margin-left: -2px
+		margin-top: -2px
+		height: 54px
+		width: 54px
+	50%
+		margin-left: 1px
+		margin-top: 1px
+		height: 48px
+		width: 48px
+@-moz-keyframes bounce1
+	0%, 65%, 100%
+		margin-left: 0
+		margin-top: 0
+		height: 50px
+		width: 50px
+	10%
+		margin-left: -8px
+		margin-top: -8px
+		height: 66px
+		width: 66px
+	25%
+		margin-left: 3px
+		margin-top: 3px
+		height: 44px
+		width: 44px
+	40%
+		margin-left: -2px
+		margin-top: -2px
+		height: 54px
+		width: 54px
+	50%
+		margin-left: 1px
+		margin-top: 1px
+		height: 48px
+		width: 48px	
+@keyframes bounce1
+	0%, 65%, 100%
+		margin-left: 0
+		margin-top: 0
+		height: 50px
+		width: 50px
+	10%
+		margin-left: -8px
+		margin-top: -8px
+		height: 66px
+		width: 66px
+	25%
+		margin-left: 3px
+		margin-top: 3px
+		height: 44px
+		width: 44px
+	40%
+		margin-left: -2px
+		margin-top: -2px
+		height: 54px
+		width: 54px
+	50%
+		margin-left: 1px
+		margin-top: 1px
+		height: 48px
+		width: 48px									
 /*----add----------------------------------------------------------*/
 .add
 	position: absolute
@@ -248,8 +307,8 @@
 	border: 1px solid #88cc7a
 	cursor: pointer
 	-webkit-transition-duration: .2s
-	+r(w1024)
-		+transform(scale(0.8))	
+	-moz-transition-duration: .2s
+	transition-duration: .2s
 	span
 		position: absolute
 		display: inline-block
@@ -272,8 +331,16 @@
 		-webkit-animation-duration: 1s
 		-webkit-animation-fill-mode: both
 		-webkit-animation-name: bounce
+		-moz-transition-duration: .2s
+		-moz-animation-duration: 1s
+		-moz-animation-fill-mode: both
+		-moz-animation-name: bounce
+		transition-duration: .2s
+		animation-duration: 1s
+		animation-fill-mode: both
+		animation-name: bounce			
 		span
-			background: #fff
+			background: #fff	
 @-webkit-keyframes bounce
 	0%, 65%, 100%
 		margin-left: 0
@@ -300,6 +367,203 @@
 		margin-top: 1px
 		height: 58px
 		width: 58px	
+@-moz-keyframes bounce
+	0%, 65%, 100%
+		margin-left: 0
+		margin-top: 0
+		height: 60px
+		width: 60px
+	10%
+		margin-left: -8px
+		margin-top: -8px
+		height: 76px
+		width: 76px
+	25%
+		margin-left: 3px
+		margin-top: 3px
+		height: 54px
+		width: 54px
+	40%
+		margin-left: -2px
+		margin-top: -2px
+		height: 64px
+		width: 64px
+	50%
+		margin-left: 1px
+		margin-top: 1px
+		height: 58px
+		width: 58px
+@keyframes bounce
+	0%, 65%, 100%
+		margin-left: 0
+		margin-top: 0
+		height: 60px
+		width: 60px
+	10%
+		margin-left: -8px
+		margin-top: -8px
+		height: 76px
+		width: 76px
+	25%
+		margin-left: 3px
+		margin-top: 3px
+		height: 54px
+		width: 54px
+	40%
+		margin-left: -2px
+		margin-top: -2px
+		height: 64px
+		width: 64px
+	50%
+		margin-left: 1px
+		margin-top: 1px
+		height: 58px
+		width: 58px		
+
+
+
+
+
+	// .add
+	// 	display: none
+	// 	+r(w768)
+	// 		display: block
+	// 		top: -3px
+	// 		left: 47.5%
+	// 		border: none		
+.add-min
+	position: absolute
+	display: inline-block
+	display: none
+	height: 50px
+	width: 50px
+	border-radius: 35px
+	border: 1px solid #88cc7a
+	cursor: pointer
+	-webkit-transition-duration: .2s
+	-moz-transition-duration: .2s
+	transition-duration: .2s
+	+r(w768)
+		display: inline-block
+		top: 2px
+		left: 47.5%
+		border: none				
+	span
+		position: absolute
+		display: inline-block
+		top: 50%
+		left: 50%
+		background: #88cc7a
+		&.vertical
+			height: 22px
+			width: 2px
+			margin-top: -11px
+			margin-left: -1px
+		&.horizontal
+			height: 2px
+			width: 22px
+			margin-top: -1px
+			margin-left: -11px
+	&:hover
+		background: #88cc7a
+		-webkit-transition-duration: .2s
+		-webkit-animation-duration: 1s
+		-webkit-animation-fill-mode: both
+		-webkit-animation-name: bounce-min
+		-moz-transition-duration: .2s
+		-moz-animation-duration: 1s
+		-moz-animation-fill-mode: both
+		-moz-animation-name: bounce-min
+		transition-duration: .2s
+		animation-duration: 1s
+		animation-fill-mode: both
+		animation-name: bounce-min			
+		span
+			background: #fff
+@-webkit-keyframes bounce-min
+	0%, 65%, 100%
+		margin-left: 0
+		margin-top: 0
+		height: 50px
+		width: 50px
+	10%
+		margin-left: -8px
+		margin-top: -8px
+		height: 66px
+		width: 66px
+	25%
+		margin-left: 3px
+		margin-top: 3px
+		height: 44px
+		width: 44px
+	40%
+		margin-left: -2px
+		margin-top: -2px
+		height: 54px
+		width: 54px
+	50%
+		margin-left: 1px
+		margin-top: 1px
+		height: 48px
+		width: 48px
+@-moz-keyframes bounce-min
+	0%, 65%, 100%
+		margin-left: 0
+		margin-top: 0
+		height: 50px
+		width: 50px
+	10%
+		margin-left: -8px
+		margin-top: -8px
+		height: 66px
+		width: 66px
+	25%
+		margin-left: 3px
+		margin-top: 3px
+		height: 44px
+		width: 44px
+	40%
+		margin-left: -2px
+		margin-top: -2px
+		height: 54px
+		width: 54px
+	50%
+		margin-left: 1px
+		margin-top: 1px
+		height: 48px
+		width: 48px
+@keyframes bounce-min
+	0%, 65%, 100%
+		margin-left: 0
+		margin-top: 0
+		height: 50px
+		width: 50px
+	10%
+		margin-left: -8px
+		margin-top: -8px
+		height: 66px
+		width: 66px
+	25%
+		margin-left: 3px
+		margin-top: 3px
+		height: 44px
+		width: 44px
+	40%
+		margin-left: -2px
+		margin-top: -2px
+		height: 54px
+		width: 54px
+	50%
+		margin-left: 1px
+		margin-top: 1px
+		height: 48px
+		width: 48px					
+
+
+
+
+
+
 /*-----user-----------------------------------------------*/	
 .user
 	display: inline-block
@@ -311,13 +575,13 @@
 	background-color: #F5F5F5 
 	padding: 5px 15px 
 	z-index: 13
+	background-color: transparent
+	right: -185px
 	+transition
 	+border-radius(5px)
 	+clr 
 	+box 
-	+r(w560)
-		background-color: transparent
-		right: -185px
+	//+r(w560)
 	.user__pic
 		float: left
 		display: inline-block
@@ -350,9 +614,8 @@
 			&:hover
 				color: $link-hover-c 
 .user-open	
-	+r(w560)
-		right: 10px
-		background-color: #F5F5F5 					
+	right: 10px
+	background-color: #F5F5F5 					
 		
 
 
@@ -373,6 +636,8 @@
 	+transition
 	&:hover .header__btn
 		-webkit-animation-name: bounce2
+		-moz-animation-name: bounce2
+		-animation-name: bounce2		
 .header__btn
 	position: absolute
 	top: 21px
@@ -386,6 +651,10 @@
 	z-index: 2
 	-webkit-animation-duration: .3s
 	-webkit-animation-fill-mode: both
+	animation-duration: .3s
+	animation-fill-mode: both
+	-moz-animation-duration: .3s
+	-moz-animation-fill-mode: both		
 .header__title em
 	display: block
 	height: 1px
@@ -396,3 +665,13 @@
 		opacity: 1
 		width: 28px
 		left: 23px
+@-moz-keyframes bounce2
+	100%
+		opacity: 1
+		width: 28px
+		left: 23px
+@keyframes bounce2
+	100%
+		opacity: 1
+		width: 28px
+		left: 23px				
