--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -447,7 +447,10 @@
 		display: inline-block
 		top: 2px
 		left: 47.5%
-		border: none				
+		border: none	
+	+r(w480)
+		left: 43.5%
+
 	span
 		position: absolute
 		display: inline-block
