--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -38,6 +38,7 @@ em
 	min-width: 320px
 	height: 100%
 	position: relative
+	background-color: $main-c 
 	//-ms-overflow-x: hidden 
 	//overflow-x: hidden 
 	//background-color: #FFF 
