--- a/css/screen.css
+++ b/css/screen.css
@@ -44,7 +44,7 @@ em { font-family: "Noto Serif", serif; }
 .nav .nav__item:hover .nav__item-point { cursor: pointer; }
 .nav .nav__item:hover .nav__item-point span { filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50); opacity: 0.5; }
 .nav .nav__item:focus { background-color: white; color: #333333; -webkit-border-radius: 5px; -moz-border-radius: 5px; -ms-border-radius: 5px; -o-border-radius: 5px; border-radius: 5px; }
-.nav .nav__item-point { position: absolute; bottom: 18px; right: 0px; display: block; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; *zoom: 1; }
+.nav .nav__item-point { position: absolute; bottom: -2px; right: 0px; display: block; height: 20px; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; *zoom: 1; }
 .nav .nav__item-point:after { content: " "; display: table; clear: both; }
 .nav .nav__item-point span { background-color: white; height: 4px; width: 4px; margin-left: 3px; float: left; filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0); opacity: 0; -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; }
 .nav .nav__item-point:hover .nav__item-popup { display: inline-block; }
@@ -54,12 +54,12 @@ em { font-family: "Noto Serif", serif; }
 .nav .nav__item-link { float: left; margin: 0 5px; z-index: 11; cursor: pointer; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; }
 .nav .nav__item-link:hover { color: #f24949; }
 
-.nav-open { left: 0; }
+.nav-open { left: 0; z-index: 2; }
 
 /*-----main------------------------------------------------------ */
-.main { background-color: white; position: relative; width: 100%; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+.main { background-color: white; position: relative; width: 100%; z-index: 3; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 
-.main-open { margin-left: 280px; }
+.main-open { margin-left: 280px; z-index: 1; }
 .main-open .header .header__btn { display: none; }
 .main-open .header__title { padding-left: 0; }
 @media only screen and (max-width: 320px) { .main-open { margin-left: 0; } }
